Add API: /proc/title
